--- a/FinalProjDotNet/MainWindow.xaml
+++ b/FinalProjDotNet/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Content="Open File" HorizontalAlignment="Left" Margin="10,356,0,0" VerticalAlignment="Top" Width="95" Height="36" Name="OpenFile" Click="OpenFile_Click"/>
+        <Button Content="Save File" HorizontalAlignment="Left" Margin="138,356,0,0" VerticalAlignment="Top" Width="95" Height="36" x:Name="OpenFile_Copy" Click="SaveFile_Click"/>
+
     </Grid>
 </Window>
