Added open file with csv

--- a/FinalProjDotNet/MainWindow.xaml
+++ b/FinalProjDotNet/MainWindow.xaml
@@ -13,9 +13,21 @@
         <Button Content="View" HorizontalAlignment="Left" Margin="701,157,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Content="Delete" HorizontalAlignment="Left" Margin="701,89,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Content="Edit" HorizontalAlignment="Left" Margin="701,53,0,0" VerticalAlignment="Top" Width="75"/>
-        <Label Name="test" Content="" HorizontalAlignment="Left" Margin="19,310,0,0" VerticalAlignment="Top" Width="743"/>
-        <Label Name="test1" Content="" HorizontalAlignment="Left" Margin="19,336,0,0" VerticalAlignment="Top" Width="720"/>
-        <Label Name="test2" Content="" HorizontalAlignment="Left" Margin="26,367,0,0" VerticalAlignment="Top" Width="727"/>
+        
+        
+        
+        <DataGrid Name="myDataGrid" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="229" Margin="26,89,0,0" VerticalAlignment="Top" Width="626" SelectionChanged="myDataGrid_SelectionChanged">
+            <DataGrid.Columns>
+               
+                <DataGridTextColumn Header="Id" Binding="{Binding Path=Id}"/>
+                <DataGridTextColumn Header="First Name" Binding="{Binding Path= FirstName}" Width="100"/>
+                <DataGridTextColumn Header="Last Name" Binding="{Binding Path=LastName}" Width="100"/>
+                <DataGridTextColumn Header="Email" Binding="{Binding Path=Email}" Width="150"/>
+                <DataGridTextColumn Header="Phone Number" Binding="{Binding Path=PhoneNum}" Width="300" />
+
+            </DataGrid.Columns>
+        </DataGrid>
+
 
     </Grid>
 </Window>
