--- a/FinalProjDotNet/MainWindow.xaml
+++ b/FinalProjDotNet/MainWindow.xaml
@@ -10,20 +10,26 @@
         <Button Content="Open File" HorizontalAlignment="Left" Margin="26,30,0,0" VerticalAlignment="Top" Width="95" Height="36" Name="OpenFile" Click="OpenFile_Click"/>
         <Button Content="Save File" HorizontalAlignment="Left" Margin="154,30,0,0" VerticalAlignment="Top" Width="95" Height="36" x:Name="OpenFile_Copy" Click="SaveFile_Click"/>
         <Button Content="Add" HorizontalAlignment="Left" Margin="701,126,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Content="View" HorizontalAlignment="Left" Margin="701,157,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Name="view" Content="View" HorizontalAlignment="Left" Margin="701,157,0,0" VerticalAlignment="Top" Width="75" Click="View_Click"/>
         <Button Content="Delete" HorizontalAlignment="Left" Margin="701,89,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Content="Edit" HorizontalAlignment="Left" Margin="701,53,0,0" VerticalAlignment="Top" Width="75"/>
-        
-        
-        
-        <DataGrid Name="myDataGrid" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="229" Margin="26,89,0,0" VerticalAlignment="Top" Width="626" SelectionChanged="myDataGrid_SelectionChanged">
-            <DataGrid.Columns>
-               
-                <DataGridTextColumn Header="Id" Binding="{Binding Path=Id}"/>
-                <DataGridTextColumn Header="First Name" Binding="{Binding Path= FirstName}" Width="100"/>
-                <DataGridTextColumn Header="Last Name" Binding="{Binding Path=LastName}" Width="100"/>
-                <DataGridTextColumn Header="Email" Binding="{Binding Path=Email}" Width="150"/>
-                <DataGridTextColumn Header="Phone Number" Binding="{Binding Path=PhoneNum}" Width="300" />
+        <Label Name="test" Content="" HorizontalAlignment="Left" Margin="81,337,0,0" VerticalAlignment="Top" Width="539" Height="45"/>
+
+
+        <DataGrid SelectionMode="single" Name="myDataGrid" AutoGenerateColumns="False" HorizontalAlignment="Left" Height="229" IsReadOnly="True" Margin="26,89,0,0" VerticalAlignment="Top" Width="630" RowHeaderWidth="0" RowHeight="20" >
+            <!--<DataGrid.Columns >
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <RadioButton Name="selectRow" Checked="selectRow_Checked" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>-->
+                <DataGridTextColumn x:Name="id" Header="Id" Binding="{Binding Path=Id}" MaxWidth="30" MinWidth="30"/>
+                <DataGridTextColumn x:Name="firstName" Header="First Name" Binding="{Binding Path= FirstName}" MaxWidth="120" MinWidth="120" />
+                <DataGridTextColumn x:Name="lastName" Header="Last Name" Binding="{Binding Path=LastName}" MaxWidth="120" MinWidth="120" />
+                <DataGridTextColumn x:Name="phoneNum" Header="Phone Number" Binding="{Binding Path=PhoneNum}" MaxWidth="100" MinWidth="100" />
+                <DataGridTextColumn x:Name="email" Header="Email" Binding="{Binding Path=Email}" MaxWidth="250" MinWidth="250" />
 
             </DataGrid.Columns>
         </DataGrid>
