--- a/FinalProjDotNet/MainWindow.xaml
+++ b/FinalProjDotNet/MainWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProjDotNet"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid>
-        <Button Content="Open File" HorizontalAlignment="Left" Margin="26,30,0,0" VerticalAlignment="Top" Width="95" Height="36" Name="OpenFile" Click="OpenFile_Click"/>
-        <Button Content="Save File" HorizontalAlignment="Left" Margin="154,30,0,0" VerticalAlignment="Top" Width="95" Height="36" x:Name="OpenFile_Copy" Click="SaveFile_Click"/>
-        <Button Content="Add" HorizontalAlignment="Left" Margin="701,126,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Name="view" Content="View" HorizontalAlignment="Left" Margin="701,157,0,0" VerticalAlignment="Top" Width="75" Click="View_Click"/>
-        <Button Content="Delete" HorizontalAlignment="Left" Margin="701,89,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Open File" HorizontalAlignment="Left" Margin="26,30,0,0" VerticalAlignment="Top" Width="95" Height="36" x:Name="OpenFile" Click="OpenFile_Click"/>
+        <Button Content="Save File" HorizontalAlignment="Left" Margin="154,30,0,0" VerticalAlignment="Top" Width="95" Height="36" x:Name="SaveFile" Click="SaveFile_Click"/>
+        <Button x:Name="Add" Content="Add" HorizontalAlignment="Left" Margin="701,126,0,0" VerticalAlignment="Top" Width="75" Click="Add_Click"/>
+        <Button x:Name="view" Content="View" HorizontalAlignment="Left" Margin="701,157,0,0" VerticalAlignment="Top" Width="75" Click="View_Click"/>
+        <Button x:Name="Delete" Content="Delete" HorizontalAlignment="Left" Margin="701,89,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Content="Edit" HorizontalAlignment="Left" Margin="701,53,0,0" VerticalAlignment="Top" Width="75"/>
         <Label Name="test" Content="" HorizontalAlignment="Left" Margin="81,337,0,0" VerticalAlignment="Top" Width="539" Height="45"/>
 
