--- a/FinalProjDotNet/MainWindow.xaml
+++ b/FinalProjDotNet/MainWindow.xaml
@@ -11,7 +11,7 @@
         <Button Content="Save File" HorizontalAlignment="Left" Margin="154,30,0,0" VerticalAlignment="Top" Width="95" Height="36" x:Name="SaveFile" Click="SaveFile_Click"/>
         <Button x:Name="Add" Content="Add" HorizontalAlignment="Left" Margin="701,126,0,0" VerticalAlignment="Top" Width="75" Click="Add_Click"/>
         <Button x:Name="view" Content="View" HorizontalAlignment="Left" Margin="701,157,0,0" VerticalAlignment="Top" Width="75" Click="View_Click"/>
-        <Button x:Name="Delete" Content="Delete" HorizontalAlignment="Left" Margin="701,89,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="Delete" Content="Delete" HorizontalAlignment="Left" Margin="701,89,0,0" VerticalAlignment="Top" Width="75" Click="Delete_Click"/>
         <Button Content="Edit" HorizontalAlignment="Left" Margin="701,53,0,0" VerticalAlignment="Top" Width="75"/>
         <Label Name="test" Content="" HorizontalAlignment="Left" Margin="81,337,0,0" VerticalAlignment="Top" Width="539" Height="45"/>
 
