--- a/FinalProjDotNet/MainWindow.xaml
+++ b/FinalProjDotNet/MainWindow.xaml
@@ -4,9 +4,130 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProjDotNet"
+        xmlns:wpfanimated="http://wpfanimatedgif.codeplex.com"
         mc:Ignorable="d"
-        Title="MainWindow" Loaded="Window_Loaded" SizeToContent="WidthAndHeight" Height="534.902" Width="551.139" Background="#FFBDBDBD" >
-    <Grid Margin="5">
+        Title="MainWindow" Loaded="Window_Loaded" SizeToContent="WidthAndHeight" Height="550" Width="535" MinHeight="550" MinWidth="535" MaxHeight="550" MaxWidth="5535">
+
+    <!--<Window.Resources>
+        <LinearGradientBrush x:Key="NormalBrush" StartPoint="0,0" EndPoint="0,1">
+            <GradientBrush.GradientStops>
+                <GradientStopCollection>
+                    <GradientStop Color="Black" Offset="0.0"/>
+                    <GradientStop Color="Black" Offset="1.0"/>
+                </GradientStopCollection>
+            </GradientBrush.GradientStops>
+        </LinearGradientBrush>
+
+        <SolidColorBrush x:Key="WindowBackgroundBrush" Color="Black" />
+
+        <ControlTemplate x:Key="ComboBoxToggleButton" TargetType="ToggleButton">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="20" />
+                </Grid.ColumnDefinitions>
+                    <Border x:Name="Border" Grid.ColumnSpan="2" CornerRadius="2"
+                      Background="{StaticResource NormalBrush}"
+                      BorderThickness="1" />
+                                    <Border 
+                      Grid.Column="0"
+                      CornerRadius="2,0,0,2" 
+                      Margin="1" 
+                      Background="{StaticResource WindowBackgroundBrush}" 
+                      BorderThickness="0,0,1,0" />
+                      <Path 
+                      x:Name="Arrow"
+                      Grid.Column="1"     
+                      HorizontalAlignment="Center"
+                      VerticalAlignment="Center"
+                      Data="M 0 0 L 4 4 L 8 0 Z"/>
+            </Grid>
+        </ControlTemplate>
+
+        <ControlTemplate x:Key="ComboBoxTextBox" TargetType="TextBox">
+            <Border x:Name="PART_ContentHost" Focusable="False" Background="{TemplateBinding Background}" />
+        </ControlTemplate>
+
+
+        <Style x:Key="{x:Type ComboBox}" TargetType="ComboBox">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ComboBox">
+                        <Grid>
+                            <ToggleButton 
+         Name="ToggleButton" 
+         Template="{StaticResource ComboBoxToggleButton}" 
+         Grid.Column="2" 
+         Focusable="false"
+         IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}"
+         ClickMode="Press">
+                            </ToggleButton>
+                            <ContentPresenter
+        Name="ContentSite"
+        IsHitTestVisible="False" 
+        Margin="3,3,23,3"
+        VerticalAlignment="Center"
+        HorizontalAlignment="Left" />
+                            <TextBox x:Name="PART_EditableTextBox"
+         Style="{x:Null}" 
+         Template="{StaticResource ComboBoxTextBox}" 
+         HorizontalAlignment="Left" 
+         VerticalAlignment="Center" 
+         Margin="3,3,23,3"
+         Focusable="True" 
+         Background="Transparent"
+         Visibility="Hidden"
+         IsReadOnly="{TemplateBinding IsReadOnly}"/>
+                            <Popup 
+        Name="Popup"
+        Placement="Bottom"
+        IsOpen="{TemplateBinding IsDropDownOpen}"
+        AllowsTransparency="True" 
+        Focusable="False"
+        PopupAnimation="Slide">
+                                <Grid 
+          Name="DropDown"
+          SnapsToDevicePixels="True"                
+          MinWidth="{TemplateBinding ActualWidth}"
+          MaxHeight="{TemplateBinding MaxDropDownHeight}">
+                                    <Border 
+            x:Name="DropDownBorder"
+            Background="{StaticResource WindowBackgroundBrush}"
+            BorderThickness="1"/>
+                                    <ScrollViewer Margin="4,6,4,6" SnapsToDevicePixels="True">
+                                        <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Contained" />
+                                    </ScrollViewer>
+                                </Grid>
+                            </Popup>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>-->
+    <!--<Window.Resources>
+        <Style x:Key="ComboBoxItemStyle1" TargetType="{x:Type ComboBoxItem}">
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
+            <Setter Property="Padding" Value="4,1"/>
+            <Setter Property="Background" Value="Yellow"/>
+            -->
+    <!-- Custom value -->
+    <!--
+            <Setter Property="BorderBrush" Value="Yellow"/>
+            -->
+    <!-- Custom value -->
+    <!--
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="Template">
+
+            </Setter>
+        </Style>
+    </Window.Resources>-->
+
+
+    <Grid >
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -20,15 +141,29 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        <Image wpfanimated:ImageBehavior.AnimatedSource="bg2.gif"
+               wpfanimated:ImageBehavior.RepeatBehavior="1"
+               wpfanimated:ImageBehavior.AnimateInDesignMode="False"
+               wpfanimated:ImageBehavior.AutoStart="True"              
+               Height="535"  Grid.ColumnSpan="3" Grid.Row="0" Grid.Column="0" Grid.RowSpan="6"/>
 
-
-        <Button Content="Open File" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" Margin="5,5,0,10" VerticalAlignment="Center" Width="180" Height="70" x:Name="OpenFile" Click="OpenFile_Click" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>
-        <Button Content="Save File" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" Margin="0,5,5,10" VerticalAlignment="Center" Width="180" Height="70" x:Name="SaveFile" Click="SaveFile_Click" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>
+        <!--<Button Content="Open File" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center" Margin="5,5,0,10" VerticalAlignment="Center" Width="180" Height="70" x:Name="OpenFile" Click="OpenFile_Click" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>
+        <Button Content="Save File" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" Margin="0,5,5,10" VerticalAlignment="Center" Width="180" Height="70" x:Name="SaveFile" Click="SaveFile_Click" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>-->
         <Button x:Name="Add" Grid.Column="2" Grid.Row="1" Content="Add" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="Add_Click" Height="50" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>
         <Button x:Name="view" Grid.Column="2" Grid.Row="2"  Content="View" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="View_Click" Height="50" FontSize="20" Background="#FF6C5C4F" Foreground="White" />
         <Button x:Name="Delete" Grid.Column="2" Grid.Row="3" Content="Delete" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="Delete_Click" Height="50" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>
         <Button Content="Edit" Grid.Column="2" Grid.Row="4" HorizontalAlignment="Right" Margin="5,5,10,5" VerticalAlignment="Center" Width="100" Click="Edit_Click" Height="50" FontSize="20" Background="#FF6C5C4F" Foreground="White"/>
 
+        <!--<ComboBox Text="File"  Grid.Row="0" Grid.ColumnSpan="3" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" Background="Black" BorderBrush="Black" Foreground="#FF0B00FF"/>-->
+
+
+        <Rectangle Grid.Row="0" HorizontalAlignment="Left" Height="22"  VerticalAlignment="Top" Width="527" Grid.ColumnSpan="3" Fill="Black"/>
+
+        <ComboBox Background="Yellow" HorizontalAlignment="Left" Width="206" >
+            <ComboBoxItem Content="One"/>
+            <ComboBoxItem Content="Two"/>
+            <ComboBoxItem Content="Three"/>
+        </ComboBox>
 
 
 
@@ -49,7 +184,8 @@
                   Margin="10" 
                   VerticalAlignment="Center"  
                   FontSize="20" 
-                  Width="394" Foreground="#FF764949" Background="White" FontWeight="Bold" >
+                  Width="394" Foreground="#FF764949" Background="White" FontWeight="Bold" HeadersVisibility="Column" 
+                  >
 
             <DataGrid.Resources>
                 <Style TargetType="DataGridRow">
@@ -66,6 +202,7 @@
 
             </DataGrid.Columns>
         </DataGrid>
+
 
 
     </Grid>
