--- a/FinalProjDotNet/PopUpAdd.xaml
+++ b/FinalProjDotNet/PopUpAdd.xaml
@@ -6,8 +6,9 @@
         xmlns:local="clr-namespace:FinalProjDotNet"
         mc:Ignorable="d"
         Title="PopUpAdd" Height="300" Width="324.344" Background="#FFBDBDBD">
+    
     <Grid>
-
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="auto" />
@@ -21,21 +22,48 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <Label Content="Add To Table" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Margin="15" VerticalAlignment="Center" Width="236" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Segoe UI Historic" FontSize="20" FontWeight="Bold"/>
+        <Label  Content="Add To Table" Grid.Column="0" Grid.ColumnSpan="2" Margin="15" VerticalAlignment="Center" Width="236" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="Segoe UI Historic" FontSize="20" FontWeight="Bold" Background="{x:Null}" HorizontalAlignment="Center" BorderThickness="2">
+            <Label.Foreground>
+                <SolidColorBrush Color="#FF2C6DCB" Opacity="0.945"/>
+            </Label.Foreground>
+            <Label.BorderBrush>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Red" Offset="0"/>
+                    <GradientStop Color="#FF932929" Offset="1"/>
+                </LinearGradientBrush>
+            </Label.BorderBrush>
+        </Label>
 
-        <Label Content="First Name: " Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="74" HorizontalContentAlignment="Right"/>
-        <TextBox x:Name="fNameAdd" Grid.Column="1" Grid.Row="1"  HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center"/>
+        <Label Content="First Name: " Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="74" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <TextBox x:Name="fNameAdd" Grid.Column="1" Grid.Row="1"  HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
+            <TextBox.Background>
+                <SolidColorBrush Color="#FFF06B0F" Opacity="0.5"/>
+            </TextBox.Background>
+        </TextBox>
 
-        <Label Content="Last Name: " Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="25" Width="82" HorizontalContentAlignment="Right"/>
-        <TextBox x:Name="lNameAdd" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="25" Width="148" VerticalContentAlignment="Center"/>
+        <Label Content="Last Name: " Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="25" Width="82" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <TextBox x:Name="lNameAdd" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="25" Width="148" VerticalContentAlignment="Center">
+            <TextBox.Background>
+                <SolidColorBrush Color="#FFF06B0F" Opacity="0.5"/>
+            </TextBox.Background>
+        </TextBox>
 
-        <Label Content="Phone Number: " Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="96" HorizontalContentAlignment="Right"/>
-        <TextBox x:Name="pNumAdd" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center"/>
+        <Label Content="Phone Number: " Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="96" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <TextBox x:Name="pNumAdd" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
+            <TextBox.Background>
+                <SolidColorBrush Color="#FFF06B0F" Opacity="0.495"/>
+            </TextBox.Background>
+        </TextBox>
 
-        <Label Content="Email: " Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="74" HorizontalContentAlignment="Right"/>
-        <TextBox x:Name="emailAdd" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center"/>
+        <Label Content="Email: " Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" Margin="5" VerticalAlignment="Center" Height="24" Width="74" HorizontalContentAlignment="Right" Background="#FF0A4364" Foreground="White"/>
+        <TextBox x:Name="emailAdd" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Left" Margin="5" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="24" Width="148" VerticalContentAlignment="Center">
+            <TextBox.Background>
+                <SolidColorBrush Color="#FFF06B0F" Opacity="0.5"/>
+            </TextBox.Background>
+        </TextBox>
 
-        <Button x:Name="Add_Button"  Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Content="Add" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Top" Width="75" Click="Add_Button_Click" Background="#FF6C5C4F" Foreground="White"/>
+        <Button  x:Name="Add_Button"  Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Content="Add" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Top" Width="75" Click="Add_Button_Click" Background="#FFF07715" Foreground="White"/>
 
     </Grid>
+   
 </Window>
